fix(lighthouse - perf): lazy load offscreen imgs + set explicit size + update snapshot

--- a/client/src/templates/Introduction/intro.css
+++ b/client/src/templates/Introduction/intro.css
@@ -1,3 +1,8 @@
+.superBlock-image {
+  max-width: 100%;
+  height: auto !important;
+}
+
 .block-ui {
   height: 100%;
   list-style: none;
